syntax="proto3";
package proto;
option go_package = "github.com/amodkala/raft/proto";

service Raft {
    rpc AppendEntries(AppendEntriesRequest) returns (AppendEntriesResponse) {}
    rpc RequestVote(RequestVoteRequest) returns (RequestVoteResponse) {}
}

message AppendEntriesRequest {
    uint32 term = 1;
    string leader_id = 2;
    uint32 prev_log_index = 3;
    uint32 prev_log_term = 4;
    repeated Entry entries = 5;
    uint32 leader_commit = 6;
}

message Entry {
    uint32 term = 1;
    string command = 2;
}

message AppendEntriesResponse{
    uint32 term = 1;
    bool success = 2;
}

message RequestVoteRequest {
    uint32 term = 1;
    string candidate_id = 2;
    uint32 last_log_index = 3;
    uint32 last_log_term = 4;
}

message RequestVoteResponse {
    uint32 term = 1;
    bool vote_granted = 2;
}